modules/local/vpc/internet-gateway.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name   = "${var.owner}-${var.environment}-internet-gateway"
  }
}
